--- a/src/components/inputField/inputField.less
+++ b/src/components/inputField/inputField.less
@@ -15,3 +15,11 @@
   line-height: 0.6rem;
   color: #999999;
 }
+
+.inputfield input {
+  outline: 0;
+  margin-top: 0.3rem;
+  height: 1.5rem;
+  border-width: 0 0 1px;
+  border-color: #3369F3;
+}
