sprint_1: rerfactor login and registration modules, add index.js to both of them + extracting fonts to globals

--- a/src/global/fonts.less
+++ b/src/global/fonts.less
@@ -8,6 +8,11 @@
   src: url("../../static/fonts/Inter/Inter-Regular.ttf") format("truetype")
 }
 
+@font-face {
+  font-family: 'Inter-bold';
+  src: url("../../static/fonts/Inter/Inter-Bold.ttf") format("truetype")
+}
+
 .fontRegular {
   font-family: 'Inter-regular';
   font-style:  normal;
@@ -15,5 +20,10 @@
 
 .fontMedium {
   font-family: 'Inter-medium';
+  font-style:  normal;
+}
+
+.fontBold {
+  font-family: 'Inter-bold';
   font-style:  normal;
 }
