--- a/src/pages/chat/noConversation/chat.less
+++ b/src/pages/chat/noConversation/chat.less
@@ -1,12 +1,12 @@
-@import '../../global/fonts.less';
-@import '../../global/styles.less';
+@import '../../../global/fonts.less';
+@import '../../../global/styles.less';
 
 .chatPageContainer {
   display: flex;
   height: 100%;
 }
 
-.chatWindow {
+.chatWindowNoCoversation {
   display: flex;
   align-items: center;
   justify-content: center;
