--- a/src/pages/home/modules/login/login.less
+++ b/src/pages/home/modules/login/login.less
@@ -53,3 +53,21 @@ html, body {
     text-decoration: underline;
   }
 }
+
+.loginLabelStyle {
+  .fontMedium;
+  display: none;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 0.6rem;
+  line-height: 0.6rem;
+  color: #999999;
+}
+
+.loginInputFieldStyle {
+  outline: 0;
+  margin-top: 1.8rem;
+  height: 1.5rem;
+  border-width: 0 0 1px;
+  border-color: #3369F3;
+}
