--- a/src/pages/registration/registration.less
+++ b/src/pages/registration/registration.less
@@ -1,5 +1,5 @@
-@import '../../../../global/fonts.less';
-@import '../../../../global/styles.less';
+@import '../../global/fonts.less';
+@import '../../global/styles.less';
 
 html, body {
   height: 100%;  
