sprint 2: centralize inputField for all pages in one component

--- a/src/components/inputField/inputField.less
+++ b/src/components/inputField/inputField.less
@@ -1,6 +1,14 @@
 @import '../../global/fonts.less';
 
-.home__inputfield {
+.inputfieldVBox {
   display: flex;
   flex-direction: column;
+}
+
+.justifyContentSpaceBetween {
+  justify-content: space-between;
+}
+
+.inputfieldHBox {
+  display: flex;
 }
