--- a/src/pages/profile/profile.less
+++ b/src/pages/profile/profile.less
@@ -100,3 +100,21 @@
     color: #FF0000;
   }
 }
+
+.profileInputField {
+  border: none;
+  font-style: normal;
+  font-size: 1rem;
+  line-height: 1rem;
+  color: #999999;
+  font-family: 'Inter-regular';
+  text-align: end;
+}
+
+.profileInputFieldLabel {
+  .fontRegular;
+  font-style: normal;
+  font-size: 1rem;
+  line-height: 1rem;
+  color: #1E1E1E;
+}
