--- a/src/pages/chats/chats.less
+++ b/src/pages/chats/chats.less
@@ -1,5 +1,5 @@
-@import '../../../global/fonts.less';
-@import '../../../global/styles.less';
+@import '../../global/fonts.less';
+@import '../../global/styles.less';
 
 .chatPageContainer {
   display: flex;
