sprint 2: initial Form validation for login page

--- a/src/components/inputField/inputField.less
+++ b/src/components/inputField/inputField.less
@@ -12,3 +12,13 @@
 .inputfieldHBox {
   display: flex;
 }
+
+.error-message {
+  font-family: 'Inter-regular';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 0.8rem;
+  color: #1E1E1E;
+  margin: 0.3rem 0 0 0;
+  color: red;
+}
