sprint 2: attempt to solve validation

--- a/src/pages/login/login.less
+++ b/src/pages/login/login.less
@@ -40,18 +40,16 @@ html, body {
 
 .login__registrationText {
   .fontRegular;
+  font-style: normal;
   color: #3369F3;
   font-size: 0.8rem;
   line-height: 0.8rem;
+  margin: 1rem 0;
+  cursor: pointer;
+}
 
-  a {
-    color:  #3369F3;
-    text-decoration: none;
-  }
-
-  a:hover {
-    text-decoration: underline;
-  }
+.login__registrationText:hover {
+  text-decoration: underline;
 }
 
 .loginLabelStyle {
