--- a/src/pages/login/login.less
+++ b/src/pages/login/login.less
@@ -38,7 +38,7 @@ html, body {
   margin-top: 3rem;
 }
 
-.login__registrationText {
+.link-registration {
   .fontRegular;
   font-style: normal;
   color: #3369F3;
@@ -48,7 +48,7 @@ html, body {
   cursor: pointer;
 }
 
-.login__registrationText:hover {
+.link-registration:hover {
   text-decoration: underline;
 }
 
