--- a/src/pages/registration/registration.less
+++ b/src/pages/registration/registration.less
@@ -38,20 +38,18 @@ html, body {
   margin-top: 3rem;
 }
 
-.login__registrationText {
+.link-signin {
   .fontRegular;
+  font-style: normal;
   color: #3369F3;
   font-size: 0.8rem;
   line-height: 0.8rem;
+  margin: 1rem 0;
+  cursor: pointer;
+}
 
-  a {
-    color:  #3369F3;
-    text-decoration: none;
-  }
-
-  a:hover {
-    text-decoration: underline;
-  }
+.link-signin:hover {
+  text-decoration: underline;
 }
 
 .registrationLabelStyle {
