sprint 2: major refactoring to components - part 2

--- a/src/pages/chats/chats.less
+++ b/src/pages/chats/chats.less
@@ -6,7 +6,7 @@
   height: 100%;
 }
 
-.chatWindowNoCoversation {
+.chatWindowNoConversation {
   display: flex;
   align-items: center;
   justify-content: center;
