sprint 2: all colors come from one place

--- a/src/components/button/button.less
+++ b/src/components/button/button.less
@@ -1,8 +1,10 @@
+@import '../../global/colors.less';
+
 .defaultButton {
   width: 15rem;
   height: 2rem;
-  color: #fff;
-  background: #3369F3;
+  color: @white;
+  background: @ultramarineBlue;
   border: none;
   border-radius: 8px;
   cursor: pointer;
