--- a/src/components/inputField/inputField.less
+++ b/src/components/inputField/inputField.less
@@ -1,4 +1,5 @@
 @import '../../global/fonts.less';
+@import '../../global/colors.less';
 
 .inputfieldVBox {
   display: flex;
@@ -19,9 +20,9 @@
   font-style: normal;
   font-weight: 500;
   font-size: 0.8rem;
-  color: #1E1E1E;
+  color: @eerieBlack;
   margin: 0.3rem 0 0 0;
-  color: red;
+  color: @red;
 }
 
-.invalidInputField { border-color: red; }
+.invalidInputField { border-color: @red; }
