--- a/src/pages/chats/chats.less
+++ b/src/pages/chats/chats.less
@@ -1,5 +1,6 @@
 @import '../../global/fonts.less';
 @import '../../global/styles.less';
+@import '../../global/colors.less';
 
 .chatPageContainer {
   display: flex;
@@ -18,5 +19,5 @@
   font-weight: 500;
   font-size: 0.9rem;
   line-height: 0.9rem;
-  color: #999999;
+  color: @baseGray;
 }
