--- a/src/pages/error/error.less
+++ b/src/pages/error/error.less
@@ -1,5 +1,6 @@
 @import '../../global/styles.less';
 @import '../../global/fonts.less';
+@import '../../global/colors.less';
 
 .errorPageContainer {
   display: flex;
@@ -14,7 +15,7 @@
   font-style: normal;
   font-size: 3rem;
   line-height: 3rem;
-  color: #1E1E1E;
+  color: @eerieBlack;
   margin-bottom: 3rem;
 }
 
@@ -23,7 +24,7 @@
   font-size: 1rem;
   line-height: 1rem;
   text-align: center;
-  color: #1E1E1E;
+  color: @eerieBlack;
 }
 
 .errorPageContainer__navToChats {
@@ -32,6 +33,6 @@
   font-size: 0.8rem;
   line-height: 0.8rem;
   text-align: center;
-  color: #3369F3;
+  color: @ultramarineBlue;
   cursor: pointer;
 }
