--- a/src/pages/profile/profile.less
+++ b/src/pages/profile/profile.less
@@ -1,5 +1,6 @@
 @import '../../global/fonts.less';
 @import '../../global/styles.less';
+@import '../../global/colors.less';
 
 .profileContainer {
   display: flex;
@@ -39,7 +40,7 @@
   line-height: 1.4rem;
   margin-top: 1rem;
   text-align: center;
-  color: #1E1E1E;
+  color: @eerieBlack;
 }
 
 .profileForm {
@@ -69,12 +70,12 @@
     font-style: normal;
     font-size: 1rem;
     line-height: 1rem;
-    color: #3369F3;
+    color: @ultramarineBlue;
     cursor: pointer;
   }
 
   .profileConfigs__logout {
-    color: #FF0000;
+    color: @red;
   }
 }
 
@@ -83,7 +84,7 @@
   font-style: normal;
   font-size: 1rem;
   line-height: 1rem;
-  color: #999999;
+  color: @baseGray;
   font-family: 'Inter-regular';
   text-align: end;
 }
@@ -93,5 +94,5 @@
   font-style: normal;
   font-size: 1rem;
   line-height: 1rem;
-  color: #1E1E1E;
+  color: @eerieBlack;
 }
