--- a/src/global/styles.less
+++ b/src/global/styles.less
@@ -24,7 +24,7 @@
    width: 0.5rem;
    height: 0.5rem;
    border-style: solid;
-   border-color: #fafafa;
+   border-color: @lotion;
    position: absolute;
    transform: rotate(-135deg);
    border-width: 0.15rem 0.15rem 0 0;
