--- a/src/pages/registration/registration.less
+++ b/src/pages/registration/registration.less
@@ -1,5 +1,7 @@
 @import '../../global/fonts.less';
 @import '../../global/styles.less';
+@import '../../global/colors.less';
+
 
 html, body {
   height: 100%;  
@@ -28,7 +30,7 @@ html, body {
   line-height: 1.4rem;
   margin-top: 4rem;
   text-align: center;
-  color: #1E1E1E;
+  color: @eerieBlack;
 }
 
 .formBottom {
@@ -41,7 +43,7 @@ html, body {
 .link-signin {
   .fontRegular;
   font-style: normal;
-  color: #3369F3;
+  color: @ultramarineBlue;
   font-size: 0.8rem;
   line-height: 0.8rem;
   margin: 1rem 0;
@@ -59,7 +61,7 @@ html, body {
   font-weight: 500;
   font-size: 0.6rem;
   line-height: 0.6rem;
-  color: #999999;
+  color: @baseGray;
 }
 
 .registrationInputFieldStyle {
@@ -67,5 +69,5 @@ html, body {
   margin-top: 1.8rem;
   height: 1.5rem;
   border-width: 0 0 1px;
-  border-color: #3369F3;
+  border-color: @ultramarineBlue;
 }
