--- a/src/components/inputField/inputField.less
+++ b/src/components/inputField/inputField.less
@@ -1,20 +1,16 @@
 @import '../../global/fonts.less';
 @import '../../global/colors.less';
 
-.inputfieldVBox {
+.inputfield_style_VBox {
   display: flex;
   flex-direction: column;
 }
 
-.justifyContentSpaceBetween {
-  justify-content: space-between;
-}
-
-.inputfieldHBox {
+.inputfield_style_HBox {
   display: flex;
 }
 
-.error-message {
+.inputfield__error-msg {
   display: block;
   font-family: 'Inter-regular';
   font-style: normal;
@@ -25,4 +21,4 @@
   color: @red;
 }
 
-.invalidInputField { border-color: @red; }
+.inputfield_style_invalid { border-color: @red; }
