--- a/src/global/styles.less
+++ b/src/global/styles.less
@@ -10,41 +10,6 @@
   height: 100%;
 }
 
-.roundButtonBase {
-  background: #3369F3;
-  width: 2rem;
-  height: 2rem;
-  border-radius: 50%;
-  border: none;
-  position: relative;
-  cursor: pointer;
- 
- &::before {
-   content: '';
-   width: 0.5rem;
-   height: 0.5rem;
-   border-style: solid;
-   border-color: @lotion;
-   position: absolute;
-   transform: rotate(-135deg);
-   border-width: 0.15rem 0.15rem 0 0;
- }
-}
-
-.roundButtonArrowLeft {
-  .roundButtonBase;
-  &::before {
-    top: 30%;
-    left: 40%;
-    transform: rotate(-135deg);
-  }
-}
-
-.roundButtonArrowRight {
-  .roundButtonBase;
-  &::before {
-    top: 30%;
-    right: 35%;
-    transform: rotate(45deg);
-  }
+.style_justifyContentSpaceBetween {
+  justify-content: space-between;
 }
