--- a/src/components/chatList/chatList.less
+++ b/src/components/chatList/chatList.less
@@ -18,7 +18,7 @@
     transition: 0.2s;
   }
 
-  .arrow-right { transform:rotate(225deg) }  
+  .arrow-right { transform:rotate(225deg) }
 }
 
 .chatlist__link_profile {
@@ -35,7 +35,26 @@
   text-decoration: underline;
 }
 
+.chatlist__link_new-chat, .chatlist__link_remove-chat {
+  .fontRegular;
+  color: @baseGray;
+  font-size: 0.8rem;
+  margin: 1.2rem 1.2rem 0 0;
+  display: flex;
+  cursor: pointer;
+}
+
+.chatlist__link_new-chat:hover, .chatlist__link_remove-chat:hover {
+  text-decoration: underline;
+}
+
 .chatlist__chats {
   margin: 1.2rem;
   overflow: scroll;
+}
+
+.chatlist__controller {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
