sprint 3: brush ups

--- a/src/components/chatList/chatList.less
+++ b/src/components/chatList/chatList.less
@@ -39,8 +39,7 @@
   .fontRegular;
   color: @baseGray;
   font-size: 0.8rem;
-  margin: 1.2rem 1.2rem 0 0;
-  display: flex;
+  margin-bottom: 1.2rem;
   cursor: pointer;
 }
 
