sprint 3: make chat removable

--- a/src/components/chatContact/chatContact.less
+++ b/src/components/chatContact/chatContact.less
@@ -47,3 +47,8 @@
 .chat-contact_highlighted {
   background-color: @lavender;
 }
+
+.chat-contact__endSection {
+  display: flex;
+  flex-direction: column;
+}
