sprint 3: small brush ups

--- a/src/components/chatContact/chatContact.less
+++ b/src/components/chatContact/chatContact.less
@@ -42,6 +42,7 @@
   margin: 0.8rem 0 0 0;
   font-size: 0.7rem;
   line-height: 0.7rem;
+  text-align: end;
 }
 
 .chat-contact_highlighted {
@@ -51,4 +52,5 @@
 .chat-contact__endSection {
   display: flex;
   flex-direction: column;
+  flex-basis: 2rem;
 }
