sprint 4: refactor - use webpack aliases

--- a/src/pages/login/login.less
+++ b/src/pages/login/login.less
@@ -1,6 +1,6 @@
-@import '../../global/fonts.less';
-@import '../../global/styles.less';
-@import '../../global/colors.less';
+@import 'global/fonts.less';
+@import 'global/styles.less';
+@import 'global/colors.less';
 
 html, body {
   height: 100%;  
