--- a/src/components/chatList/chatList.less
+++ b/src/components/chatList/chatList.less
@@ -1,6 +1,6 @@
-@import '../../global/styles.less';
-@import '../../global/fonts.less';
-@import '../../global/colors.less';
+@import 'global/styles.less';
+@import 'global/fonts.less';
+@import 'global/colors.less';
 
 .chatlist {
   flex-direction: column;
