--- a/src/components/inputField/inputField.less
+++ b/src/components/inputField/inputField.less
@@ -1,5 +1,5 @@
-@import '../../global/fonts.less';
-@import '../../global/colors.less';
+@import 'global/fonts.less';
+@import 'global/colors.less';
 
 .inputfield_style_VBox {
   display: flex;
