--- a/src/pages/login/login.less
+++ b/src/pages/login/login.less
@@ -39,7 +39,7 @@ html, body {
   margin-top: 3rem;
 }
 
-.link-registration {
+.link-registration, .link-signin {
   .fontRegular;
   font-style: normal;
   color: @ultramarineBlue;
